# cimgui

./: CMakeLists.txt  cimgui.cpp  cimgui.h
generator/: config_generator.lua  generator.bat
generator/output/: cimgui_impl.h  definitions.json  definitions.lua  impl_definitions.json  impl_definitions.lua  structs_and_enums.json  structs_and_enums.lua
